kubernetes/apps/adguard/resources/ardguard-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard
  labels:
    app: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http-initial
              containerPort: 3000
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: work
              mountPath: /opt/adguardhome/work
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: adguard-config
        - name: work
          persistentVolumeClaim:
            claimName: adguard-work
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
  annotations:
    metallb.io/loadBalancerIPs: 192.168.1.5
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: http-initial
      port: 3000
      targetPort: 3000
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-web
  namespace: adguard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.local`)
      kind: Rule
      services:
        - name: adguard-web
          port: 3000
  tls:
    secretName: adguard-tls
